RESOLVED FIXED155449
Regression(r197939): ASSERTION FAILED: url.containsOnlyASCII() in URL.cpp
https://bugs.webkit.org/show_bug.cgi?id=155449
Summary Regression(r197939): ASSERTION FAILED: url.containsOnlyASCII() in URL.cpp
Chris Dumez
Reported 2016-03-14 11:48:00 PDT
Regression(r197939): ASSERTION FAILED: url.containsOnlyASCII() in URL.cpp: ASSERTION FAILED: url.containsOnlyASCII() /Users/antti/webkit/OpenSource/Source/WebCore/platform/URL.cpp(408) : void WebCore::checkEncodedString(const WTF::String &) 1 0x113ab2d30 WTFCrash 2 0x1180e95c1 WebCore::checkEncodedString(WTF::String const&) 3 0x1180e3eda WebCore::URL::parse(WTF::String const&) 4 0x1180e3e60 WebCore::URL::URL(WebCore::ParsedURLStringTag, WTF::String const&) 5 0x1180e3f93 WebCore::URL::URL(WebCore::ParsedURLStringTag, WTF::String const&) 6 0x10f9f5188 WebKit::NetworkCache::Coder<WebCore::URL>::decode(WebKit::NetworkCache::Decoder&, WebCore::URL&) 7 0x10fa9529d bool WebKit::NetworkCache::Decoder::decode<WebCore::URL>(WebCore::URL&) 8 0x10fa9477d WebKit::NetworkCache::SubresourceInfo::decode(WebKit::NetworkCache::Decoder&, WebKit::NetworkCache::SubresourceInfo&) 9 0x10fa95ced WebKit::NetworkCache::Coder<WebKit::NetworkCache::SubresourceInfo>::decode(WebKit::NetworkCache::Decoder&, WebKit::NetworkCache::SubresourceInfo&) 10 0x10fa95c1d bool WebKit::NetworkCache::Decoder::decode<WebKit::NetworkCache::SubresourceInfo>(WebKit::NetworkCache::SubresourceInfo&) 11 0x10fa95ab7 WebKit::NetworkCache::Coder<WTF::HashMap<WebKit::NetworkCache::Key, WebKit::NetworkCache::SubresourceInfo, WTF::NetworkCacheKeyHash, WTF::HashTraits<WebKit::NetworkCache::Key>, WTF::HashTraits<WebKit::NetworkCache::SubresourceInfo> > >::decode(WebKit::NetworkCache::Decoder&, WTF::HashMap<WebKit::NetworkCache::Key, WebKit::NetworkCache::SubresourceInfo, WTF::NetworkCacheKeyHash, WTF::HashTraits<WebKit::NetworkCache::Key>, WTF::HashTraits<WebKit::NetworkCache::SubresourceInfo> >&) 12 0x10fa953ed bool WebKit::NetworkCache::Decoder::decode<WTF::HashMap<WebKit::NetworkCache::Key, WebKit::NetworkCache::SubresourceInfo, WTF::NetworkCacheKeyHash, WTF::HashTraits<WebKit::NetworkCache::Key>, WTF::HashTraits<WebKit::NetworkCache::SubresourceInfo> > >(WTF::HashMap<WebKit::NetworkCache::Key, WebKit::NetworkCache::SubresourceInfo, WTF::NetworkCacheKeyHash, WTF::HashTraits<WebKit::NetworkCache::Key>, WTF::HashTraits<WebKit::NetworkCache::SubresourceInfo> >&) 13 0x10fa949aa WebKit::NetworkCache::SubresourcesEntry::decodeStorageRecord(WebKit::NetworkCache::Storage::Record const&) 14 0x10fa1c334 WebKit::NetworkCache::SpeculativeLoadManager::retrieveSubresourcesEntry(WebKit::NetworkCache::Key const&, std::__1::function<void (std::__1::unique_ptr<WebKit::NetworkCache::SubresourcesEntry, std::__1::default_delete<WebKit::NetworkCache::SubresourcesEntry> >)>)::$_7::operator()(std::__1::unique_ptr<WebKit::NetworkCache::Storage::Record, std::__1::default_delete<WebKit::NetworkCache::Storage::Record> >) const 15 0x10fa1bf82 bool std::__1::__invoke_void_return_wrapper<bool>::__call<WebKit::NetworkCache::SpeculativeLoadManager::retrieveSubresourcesEntry(WebKit::NetworkCache::Key const&, std::__1::function<void (std::__1::unique_ptr<WebKit::NetworkCache::SubresourcesEntry, std::__1::default_delete<WebKit::NetworkCache::SubresourcesEntry> >)>)::$_7&, std::__1::unique_ptr<WebKit::NetworkCache::Storage::Record, std::__1::default_delete<WebKit::NetworkCache::Storage::Record> > >(WebKit::NetworkCache::SpeculativeLoadManager::retrieveSubresourcesEntry(WebKit::NetworkCache::Key const&, std::__1::function<void (std::__1::unique_ptr<WebKit::NetworkCache::SubresourcesEntry, std::__1::default_delete<WebKit::NetworkCache::SubresourcesEntry> >)>)::$_7&&&, std::__1::unique_ptr<WebKit::NetworkCache::Storage::Record, std::__1::default_delete<WebKit::NetworkCache::Storage::Record> >&&) 16 0x10fa1bc5c std::__1::__function::__func<WebKit::NetworkCache::SpeculativeLoadManager::retrieveSubresourcesEntry(WebKit::NetworkCache::Key const&, std::__1::function<void (std::__1::unique_ptr<WebKit::NetworkCache::SubresourcesEntry, std::__1::default_delete<WebKit::NetworkCache::SubresourcesEntry> >)>)::$_7, std::__1::allocator<WebKit::NetworkCache::SpeculativeLoadManager::retrieveSubresourcesEntry(WebKit::NetworkCache::Key const&, std::__1::function<void (std::__1::unique_ptr<WebKit::NetworkCache::SubresourcesEntry, std::__1::default_delete<WebKit::NetworkCache::SubresourcesEntry> >)>)::$_7>, bool (std::__1::unique_ptr<WebKit::NetworkCache::Storage::Record, std::__1::default_delete<WebKit::NetworkCache::Storage::Record> >)>::operator()(std::__1::unique_ptr<WebKit::NetworkCache::Storage::Record, std::__1::default_delete<WebKit::NetworkCache::Storage::Record> >&&) 17 0x10fa7f795 std::__1::function<bool (std::__1::unique_ptr<WebKit::NetworkCache::Storage::Record, std::__1::default_delete<WebKit::NetworkCache::Storage::Record> >)>::operator()(std::__1::unique_ptr<WebKit::NetworkCache::Storage::Record, std::__1::default_delete<WebKit::NetworkCache::Storage::Record> >) const 18 0x10fa5164d WebKit::NetworkCache::Storage::ReadOperation::finish() 19 0x10fa6c057 WebKit::NetworkCache::Storage::finishReadOperation(WebKit::NetworkCache::Storage::ReadOperation&)::$_6::operator()() const 20 0x10fa6c01d void std::__1::__invoke_void_return_wrapper<void>::__call<WebKit::NetworkCache::Storage::finishReadOperation(WebKit::NetworkCache::Storage::ReadOperation&)::$_6&>(WebKit::NetworkCache::Storage::finishReadOperation(WebKit::NetworkCache::Storage::ReadOperation&)::$_6&&&) 21 0x10fa6bfbc std::__1::__function::__func<WebKit::NetworkCache::Storage::finishReadOperation(WebKit::NetworkCache::Storage::ReadOperation&)::$_6, std::__1::allocator<WebKit::NetworkCache::Storage::finishReadOperation(WebKit::NetworkCache::Storage::ReadOperation&)::$_6>, void ()>::operator()() 22 0x1133beb1a std::__1::function<void ()>::operator()() const 23 0x113aff982 WTF::RunLoop::performWork() 24 0x113b001a4 WTF::RunLoop::performWork(void*) 25 0x7fff9caa3fe1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 26 0x7fff9ca8371c __CFRunLoopDoSources0 27 0x7fff9ca82c3f __CFRunLoopRun 28 0x7fff9ca82638 CFRunLoopRunSpecific 29 0x7fff8b166dd9 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 30 0x7fff8b166cb8 -[NSRunLoop(NSRunLoop) run] 31 0x7fff9ea20434 _xpc_objc_main
Attachments
Patch (1.84 KB, patch)
2016-03-14 11:52 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-03-14 11:48:35 PDT
Chris Dumez
Comment 2 2016-03-14 11:52:24 PDT
WebKit Commit Bot
Comment 3 2016-03-15 00:37:20 PDT
Comment on attachment 273996 [details] Patch Clearing flags on attachment: 273996 Committed r198202: <http://trac.webkit.org/changeset/198202>
WebKit Commit Bot
Comment 4 2016-03-15 00:37:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.